--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          personal_token: ${{ secrets.GALARRAGA_TOKEN }}
+          github_token: ${{ secrets.GALARRAGA_TOKEN }}
           publish_dir: ./build
           publish_branch: gh-pages
           force_orphan: true 
