--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,18 +7,15 @@ on:
 
 permissions:
   contents: write
-  pages: write
-  id-token: write
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GALARRAGA_TOKEN }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -31,14 +28,10 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: './build'
-
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2 
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GALARRAGA_TOKEN }}
+          publish_dir: ./build
+          publish_branch: gh-pages
+          force_orphan: true 
