--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "galarragallc",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://alexis910505.github.io/galarragallc",
+  "homepage": "https://galarragallc.github.io/galarragallc",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^5.17.0",
