--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^15.5.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "typescript": "4.9.5"
   },
   "scripts": {
     "predeploy": "npm run build",
